# ParquetSalesExercise

./: .gitignore  main.py  pyproject.toml
docker/: docker-compose.yml
notebooks/: main.ipynb
src/: spark_client.py
