[project]
name = "parquetsalesexercise"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = ["ipykernel>=7.1.0", "pyspark[connect]==4.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
